leson4/acp.html

--- a/leson3/acp.html
+++ b/leson3/acp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Practicing the basic html structure</title>
+        <title></title>
     </head>
     <body>
         <a href "https://www.steam.com">steam</a>
